--- a/assets/css/3-modules/_gallery.scss
+++ b/assets/css/3-modules/_gallery.scss
@@ -58,9 +58,11 @@
     margin: 0;
     font-size: 14px;
     line-height: 1.2;
+    height: 32px;
 
     @include tablet-sm-min {
       font-size: 20px;
+      height: 48px;
     }
   }
 }
