--- a/assets/css/4-sections/_content.scss
+++ b/assets/css/4-sections/_content.scss
@@ -2,10 +2,6 @@
 .section--content {
   text-align: left;
 
-  p.lead {
-    font-weight: 700;
-  }
-
   p a,
   a {
     color: $orange;
@@ -20,6 +16,31 @@
   }
 }
 /* END CONTENT */
+
+/* BEGIN SINGLE-POST */
+.single-post .section--content {
+
+  .container {
+
+    p:first-of-type {
+      font-weight: 700;
+    }
+
+    @include tablet-sm-min {
+      margin: 0 auto;
+      width: 720px;
+    }
+
+    @include tablet-l-min {
+      width: 780px;
+    }
+
+    @include desktop-xs-min {
+      width: 750px;
+    }
+  }
+}
+/* END SINGLE-POST */
 
 /* BEGIN WP-DISCUZ */
 #wc-comment-header,
