New icons, section article class based on num of articles, testimonials video poster fallback

--- a/assets/css/1-tools/_flaticon.scss
+++ b/assets/css/1-tools/_flaticon.scss
@@ -24,11 +24,12 @@
   line-height: 1;
 }
 
-.flaticon-musica-searcher:before { content: "\f100"; }
-.flaticon-instagram-logo:before { content: "\f101"; }
-.flaticon-facebook-letter-logo:before { content: "\f102"; }
-.flaticon-landscape-representing-photo-archive:before { content: "\f103"; }
-.flaticon-games:before { content: "\f104"; }
-.flaticon-distance:before { content: "\f105"; }
-.flaticon-prize-badge-with-star-and-ribbon:before { content: "\f106"; }
-.flaticon-clock:before { content: "\f107"; }
+.flaticon-medal:before { content: "\f100"; }
+.flaticon-people:before { content: "\f101"; }
+.flaticon-mountain:before { content: "\f102"; }
+.flaticon-sports:before { content: "\f103"; }
+.flaticon-musica-searcher:before { content: "\f104"; }
+.flaticon-instagram-logo:before { content: "\f105"; }
+.flaticon-facebook-letter-logo:before { content: "\f106"; }
+.flaticon-landscape-representing-photo-archive:before { content: "\f107"; }
+.flaticon-distance:before { content: "\f108"; }
