--- a/main.css
+++ b/main.css
@@ -1008,29 +1008,32 @@ a img.aligncenter {
   font-style: normal;
   line-height: 1; }
 
-.flaticon-musica-searcher:before {
+.flaticon-medal:before {
   content: "\f100"; }
 
-.flaticon-instagram-logo:before {
+.flaticon-people:before {
   content: "\f101"; }
 
-.flaticon-facebook-letter-logo:before {
+.flaticon-mountain:before {
   content: "\f102"; }
 
-.flaticon-landscape-representing-photo-archive:before {
+.flaticon-sports:before {
   content: "\f103"; }
 
-.flaticon-games:before {
+.flaticon-musica-searcher:before {
   content: "\f104"; }
 
-.flaticon-distance:before {
+.flaticon-instagram-logo:before {
   content: "\f105"; }
 
-.flaticon-prize-badge-with-star-and-ribbon:before {
+.flaticon-facebook-letter-logo:before {
   content: "\f106"; }
 
-.flaticon-clock:before {
+.flaticon-landscape-representing-photo-archive:before {
   content: "\f107"; }
+
+.flaticon-distance:before {
+  content: "\f108"; }
 
 /* Magnific Popup CSS */
 .mfp-bg {
@@ -1435,7 +1438,7 @@ a {
 .container {
   display: table;
   width: 100%;
-  padding: 30px 15px;
+  padding: 30px 10px;
   position: relative; }
   @media (min-width: 600px) {
     .container {
@@ -1460,18 +1463,18 @@ a {
 .col {
   position: relative; }
 
-.col-4 {
+.col-2 {
   margin-bottom: 30px; }
-  @media (min-width: 1024px) {
-    .col-4 {
-      width: 33.33%;
+  @media (min-width: 1200px) {
+    .col-2 {
+      width: 20%;
       float: left; }
-      .col-4:first-child {
-        padding-right: 15px; }
-      .col-4:nth-child(2) {
-        padding: 0 15px; }
-      .col-4:last-child {
-        padding-left: 15px; } }
+      .col-2:first-child {
+        padding-right: 10px; }
+      .col-2:nth-child(2), .col-2:nth-child(3), .col-2:nth-child(4) {
+        padding: 0 10px; }
+      .col-2:last-child {
+        padding-left: 10px; } }
 
 .col-3 {
   margin-bottom: 20px; }
@@ -1494,6 +1497,19 @@ a {
       .col-3:nth-child(2), .col-3:nth-child(3) {
         padding: 0 15px; }
       .col-3:last-child {
+        padding-left: 15px; } }
+
+.col-4 {
+  margin-bottom: 30px; }
+  @media (min-width: 1024px) {
+    .col-4 {
+      width: 33.33%;
+      float: left; }
+      .col-4:first-child {
+        padding-right: 15px; }
+      .col-4:nth-child(2) {
+        padding: 0 15px; }
+      .col-4:last-child {
         padding-left: 15px; } }
 
 @media (min-width: 1024px) {
@@ -1797,9 +1813,9 @@ button {
       display: block; }
       @media (min-width: 960px) {
         .primary-nav__menu a {
-          padding: 15px 10px; } }
-      .primary-nav__menu a:hover {
-        color: #ffce28; }
+          padding: 15px 10px; }
+          .primary-nav__menu a:hover {
+            color: #ffce28; } }
   .primary-nav__socials {
     display: none;
     float: left; }
@@ -2054,27 +2070,31 @@ button {
   border: 1px solid #ddd;
   border-bottom-width: 2px;
   border-radius: 3px;
-  padding: 35px 15px;
-  text-align: center; }
+  padding: 30px 15px;
+  text-align: center;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto; }
   .counter__icon {
     display: block;
     color: #000;
     margin-bottom: 15px; }
   .counter [class*=" flaticon-"]:after, .counter [class*=" flaticon-"]:before, .counter [class^=flaticon-]:after, .counter [class^=flaticon-]:before {
-    font-size: 45px;
+    font-size: 60px;
     line-height: 1; }
   .counter__title {
     display: block;
     color: #ffce28;
     font-weight: 400;
-    font-size: 42px;
+    font-size: 32px;
     line-height: 1;
     margin-bottom: 17px; }
   .counter__description {
     display: block;
     color: #000;
     font-weight: 600;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-size: 12px; }
 
 /* END COUNTER */
 /* BEGIN MODAL */
@@ -2623,10 +2643,10 @@ button {
 
 /* END HERO */
 /* BEGIN ARTICLES */
-.section--articles .col-4:last-child {
+.section--articles .col-4:nth-child(3) {
   display: none; }
   @media (min-width: 1024px) {
-    .section--articles .col-4:last-child {
+    .section--articles .col-4:nth-child(3) {
       display: block;
       margin-bottom: 0; } }
 
@@ -2635,6 +2655,24 @@ button {
   @media (min-width: 1024px) {
     .section--articles .col-4:nth-child(2) {
       margin-bottom: 30px; } }
+
+.section--articles--single .col-4 {
+  width: 100%;
+  padding: 0; }
+
+@media (min-width: 1024px) {
+  .section--articles--single .article__tile {
+    width: 40%;
+    float: left;
+    margin-right: 45px; }
+  .section--articles--single .article__wrap {
+    height: auto !important;
+    width: calc(60% - 45px);
+    float: left; } }
+
+@media (min-width: 1024px) {
+  .section--articles--double .col-4 {
+    width: 50%; } }
 
 /* END ARTICLES */
 /* BEGIN COUNTERS */
@@ -2742,6 +2780,8 @@ button {
   .section--partners .container,
   .section--partners .row {
     display: block; }
+  .section--partners .col-2 {
+    margin-bottom: 0; }
   @media (min-width: 1024px) {
     .section--partners .row {
       display: -webkit-box;
@@ -2880,7 +2920,7 @@ button {
     .site-footer .col-8 {
       margin-right: 10px; } }
   .site-footer .row-mobile {
-    position: initial; }
+    position: static; }
     @media (min-width: 1024px) {
       .site-footer .row-mobile {
         float: left;
