New testimonials video

--- a/assets/css/3-modules/_blockquote.scss
+++ b/assets/css/3-modules/_blockquote.scss
@@ -25,9 +25,9 @@
   &:before {
     content: "“";
     position: absolute;
-    left: -5px;
+    left: 0;
     top: -20px;
-    font-size: 120px;
+    font-size: 110px;
     font-family: $poppins;
     font-weight: 800;
 
