--- a/assets/css/4-sections/_testimonials.scss
+++ b/assets/css/4-sections/_testimonials.scss
@@ -15,8 +15,9 @@
 
   video {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     min-height: 100%;
     min-width: 100%;
     z-index: 2;
