--- a/main.css
+++ b/main.css
@@ -2042,10 +2042,17 @@ button {
 /* END ARTICLE--SINGLE */
 /* BEGIN ARTICLE--ARCHIVE */
 .section--content .article--archive {
-  margin-bottom: 30px; }
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #f5f5f5; }
+  .section--content .article--archive:last-of-type {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: none; }
   @media (min-width: 1024px) {
     .section--content .article--archive {
-      margin-bottom: 45px; } }
+      margin-bottom: 30px;
+      padding-bottom: 30px; } }
   .section--content .article--archive .article__content {
     margin-bottom: 25px; }
   .section--content .article--archive a {
@@ -2582,7 +2589,7 @@ button {
     font-size: 26px;
     line-height: 1.2;
     margin-top: 0;
-    margin-bottom: 17px; }
+    margin-bottom: 5px; }
     @media (min-width: 600px) {
       .section--hero h2 {
         font-size: 28px; } }
@@ -2597,11 +2604,15 @@ button {
         font-size: 40px; } }
   .section--hero p {
     color: #FFF;
+    font-family: "Poppins", sans-serif;
     margin-top: 0;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold; }
     @media (min-width: 768px) {
       .section--hero p {
-        font-size: 16px; } }
+        font-size: 22px; } }
   .section--hero .wrap {
     margin-top: 5px;
     margin-bottom: 45px;
@@ -2886,7 +2897,10 @@ button {
             transform: translate(-50%, -50%);
     min-height: 100%;
     min-width: 100%;
-    z-index: 2; }
+    z-index: 2;
+    -o-object-fit: cover;
+       object-fit: cover;
+    background-size: 100% 100%; }
   .section--testimonials .container {
     z-index: 9; }
 
@@ -2993,6 +3007,13 @@ button {
     color: #FFF; }
     .section--content a.btn-dark:hover {
       color: #2e5170; }
+  .section--content .alignleft,
+  .section--content .alignright {
+    margin: 20px 0 0 0; }
+    @media (min-width: 1024px) {
+      .section--content .alignleft,
+      .section--content .alignright {
+        margin-top: 30px; } }
 
 /* END CONTENT */
 /* BEGIN SINGLE-POST */
