--- a/assets/css/4-sections/_hero.scss
+++ b/assets/css/4-sections/_hero.scss
@@ -25,7 +25,7 @@
     font-size: 26px;
     line-height: 1.2;
     margin-top: 0;
-    margin-bottom: 17px;
+    margin-bottom: 5px;
 
     @include phone-xl-min {
       font-size: 28px;
@@ -46,11 +46,15 @@
 
   p {
     color: $white;
+    font-family: $poppins;
     margin-top: 0;
     margin-bottom: 20px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
 
     @include tablet-sm-min {
-      font-size: 16px;
+      font-size: 22px;
     }
   }
 
