--- a/assets/css/4-sections/_testimonials.scss
+++ b/assets/css/4-sections/_testimonials.scss
@@ -21,6 +21,8 @@
     min-height: 100%;
     min-width: 100%;
     z-index: 2;
+    object-fit: cover;
+    background-size: 100% 100%;
   }
 
   .container {
