--- a/main.css
+++ b/main.css
@@ -388,13 +388,6 @@ img {
 /* BEGIN MIXINS */
 /* END MIXINS */
 /* BEGIN ANIMATIONS */
-@-webkit-keyframes animatetop {
-  0% {
-    top: -300px;
-    opacity: 0; }
-  100% {
-    top: 50%;
-    opacity: 1; } }
 @keyframes animatetop {
   0% {
     top: -300px;
@@ -427,8 +420,6 @@ img {
   float: left; }
 
 .swiper-container-vertical > .swiper-wrapper {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column; }
 
 .swiper-wrapper {
@@ -436,16 +427,11 @@ img {
   width: 100%;
   height: 100%;
   z-index: 1;
-  display: -webkit-box;
   display: flex;
-  transition-property: -webkit-transform;
   transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  transition-property: transform,-webkit-transform;
   box-sizing: content-box; }
 
 .swiper-container-android .swiper-slide, .swiper-wrapper {
-  -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); }
 
 .swiper-container-multirow > .swiper-wrapper {
@@ -460,10 +446,7 @@ img {
   width: 100%;
   height: 100%;
   position: relative;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  transition-property: transform,-webkit-transform; }
+  transition-property: transform; }
 
 .swiper-invisible-blank-slide {
   visibility: hidden; }
@@ -472,18 +455,13 @@ img {
   height: auto; }
 
 .swiper-container-autoheight .swiper-wrapper {
-  -webkit-box-align: start;
   align-items: flex-start;
-  transition-property: height,-webkit-transform;
-  transition-property: transform,height;
-  transition-property: transform,height,-webkit-transform; }
+  transition-property: transform,height; }
 
 .swiper-container-3d {
-  -webkit-perspective: 1200px;
   perspective: 1200px; }
 
 .swiper-container-3d .swiper-cube-shadow, .swiper-container-3d .swiper-slide, .swiper-container-3d .swiper-slide-shadow-bottom, .swiper-container-3d .swiper-slide-shadow-left, .swiper-container-3d .swiper-slide-shadow-right, .swiper-container-3d .swiper-slide-shadow-top, .swiper-container-3d .swiper-wrapper {
-  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d; }
 
 .swiper-container-3d .swiper-slide-shadow-bottom, .swiper-container-3d .swiper-slide-shadow-left, .swiper-container-3d .swiper-slide-shadow-right, .swiper-container-3d .swiper-slide-shadow-top {
@@ -496,16 +474,16 @@ img {
   z-index: 10; }
 
 .swiper-container-3d .swiper-slide-shadow-left {
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), transparent); }
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)); }
 
 .swiper-container-3d .swiper-slide-shadow-right {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), transparent); }
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)); }
 
 .swiper-container-3d .swiper-slide-shadow-top {
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent); }
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)); }
 
 .swiper-container-3d .swiper-slide-shadow-bottom {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent); }
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)); }
 
 .swiper-container-wp8-horizontal, .swiper-container-wp8-horizontal > .swiper-wrapper {
   touch-action: pan-y; }
@@ -556,7 +534,6 @@ img {
   position: absolute;
   text-align: center;
   transition: .3s opacity;
-  -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   z-index: 10; }
 
@@ -573,28 +550,22 @@ img {
   font-size: 0; }
 
 .swiper-pagination-bullets-dynamic .swiper-pagination-bullet {
-  -webkit-transform: scale(0.33);
   transform: scale(0.33);
   position: relative; }
 
 .swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active {
-  -webkit-transform: scale(1);
   transform: scale(1); }
 
 .swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-prev {
-  -webkit-transform: scale(0.66);
   transform: scale(0.66); }
 
 .swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-prev-prev {
-  -webkit-transform: scale(0.33);
   transform: scale(0.33); }
 
 .swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-next {
-  -webkit-transform: scale(0.66);
   transform: scale(0.66); }
 
 .swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-next-next {
-  -webkit-transform: scale(0.33);
   transform: scale(0.33); }
 
 .swiper-pagination-bullet {
@@ -624,7 +595,6 @@ button.swiper-pagination-bullet {
 .swiper-container-vertical > .swiper-pagination-bullets {
   right: 10px;
   top: 50%;
-  -webkit-transform: translate3d(0, -50%, 0);
   transform: translate3d(0, -50%, 0); }
 
 .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
@@ -633,7 +603,6 @@ button.swiper-pagination-bullet {
 
 .swiper-container-vertical > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   top: 50%;
-  -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   width: 8px; }
 
@@ -648,7 +617,6 @@ button.swiper-pagination-bullet {
 
 .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   left: 50%;
-  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   white-space: nowrap; }
 
@@ -673,13 +641,10 @@ button.swiper-pagination-bullet {
   top: 0;
   width: 100%;
   height: 100%;
-  -webkit-transform: scale(0);
   transform: scale(0);
-  -webkit-transform-origin: left top;
   transform-origin: left top; }
 
 .swiper-container-rtl .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-  -webkit-transform-origin: right top;
   transform-origin: right top; }
 
 .swiper-container-horizontal > .swiper-pagination-progressbar {
@@ -749,11 +714,8 @@ button.swiper-pagination-bullet {
 .swiper-zoom-container {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
   align-items: center;
   text-align: center; }
 
@@ -775,9 +737,7 @@ button.swiper-pagination-bullet {
   margin-left: -21px;
   margin-top: -21px;
   z-index: 10;
-  -webkit-transform-origin: 50%;
   transform-origin: 50%;
-  -webkit-animation: swiper-preloader-spin 1s steps(12, end) infinite;
   animation: swiper-preloader-spin 1s steps(12, end) infinite; }
 
 .swiper-lazy-preloader:after {
@@ -793,14 +753,8 @@ button.swiper-pagination-bullet {
 .swiper-lazy-preloader-white:after {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D'0%200%20120%20120'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20xmlns%3Axlink%3D'http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink'%3E%3Cdefs%3E%3Cline%20id%3D'l'%20x1%3D'60'%20x2%3D'60'%20y1%3D'7'%20y2%3D'27'%20stroke%3D'%23fff'%20stroke-width%3D'11'%20stroke-linecap%3D'round'%2F%3E%3C%2Fdefs%3E%3Cg%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(30%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(60%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(90%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(120%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(150%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.37'%20transform%3D'rotate(180%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.46'%20transform%3D'rotate(210%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.56'%20transform%3D'rotate(240%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.66'%20transform%3D'rotate(270%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.75'%20transform%3D'rotate(300%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.85'%20transform%3D'rotate(330%2060%2C60)'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E"); }
 
-@-webkit-keyframes swiper-preloader-spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-
 @keyframes swiper-preloader-spin {
   100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
 
 .swiper-container .swiper-notification {
@@ -833,7 +787,6 @@ button.swiper-pagination-bullet {
   backface-visibility: hidden;
   z-index: 1;
   visibility: hidden;
-  -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
   width: 100%;
   height: 100%; }
@@ -842,7 +795,6 @@ button.swiper-pagination-bullet {
   pointer-events: none; }
 
 .swiper-container-cube.swiper-container-rtl .swiper-slide {
-  -webkit-transform-origin: 100% 0;
   transform-origin: 100% 0; }
 
 .swiper-container-cube .swiper-slide-active, .swiper-container-cube .swiper-slide-active .swiper-slide-active {
@@ -1391,13 +1343,10 @@ img.mfp-img {
 
 @media all and (max-width: 900px) {
   .mfp-arrow {
-    -webkit-transform: scale(0.75);
     transform: scale(0.75); }
   .mfp-arrow-left {
-    -webkit-transform-origin: 0;
     transform-origin: 0; }
   .mfp-arrow-right {
-    -webkit-transform-origin: 100%;
     transform-origin: 100%; }
   .mfp-container {
     padding-left: 6px;
@@ -1715,11 +1664,9 @@ button {
     margin: auto;
     transition: all 0.4s ease-in-out; }
   .js-toggle-nav:before {
-    -webkit-transform: translateY(9px);
-            transform: translateY(9px); }
+    transform: translateY(9px); }
   .js-toggle-nav:after {
-    -webkit-transform: translateY(-9px);
-            transform: translateY(-9px); }
+    transform: translateY(-9px); }
   .js-toggle-nav:hover {
     opacity: 0.6; }
 
@@ -1853,38 +1800,27 @@ button {
     text-align: center;
     position: fixed;
     right: 0;
-    display: -webkit-box;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-            justify-content: center; }
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
     .primary-nav.opened .js-toggle-nav {
       right: 0; }
       .primary-nav.opened .js-toggle-nav__line {
         opacity: 0; }
       .primary-nav.opened .js-toggle-nav:after {
-        -webkit-transform: rotate(45deg);
-                transform: rotate(45deg); }
+        transform: rotate(45deg); }
       .primary-nav.opened .js-toggle-nav:before {
-        -webkit-transform: rotate(-45deg);
-                transform: rotate(-45deg); }
+        transform: rotate(-45deg); }
     .primary-nav.opened .primary-nav__menu {
       position: relative;
       width: 80%;
       margin-left: 10%;
       margin-right: 10%;
       float: none;
-      display: -webkit-box;
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-              flex-direction: column;
-      -webkit-box-align: center;
-              align-items: center; }
+      flex-direction: column;
+      align-items: center; }
       .primary-nav.opened .primary-nav__menu li {
         display: block; }
     .primary-nav.opened .primary-nav__socials {
@@ -1900,8 +1836,7 @@ button {
   width: 100%;
   overflow: hidden; }
   .article a:hover .article__img {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-            transform: scale3d(1.1, 1.1, 1); }
+    transform: scale3d(1.1, 1.1, 1); }
   .article a:hover .article__thumb:before {
     opacity: 0.25; }
   .article a:hover .btn {
@@ -2127,11 +2062,9 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     width: 100%;
-    -webkit-animation: animatetop 0.4s;
-            animation: animatetop 0.4s; }
+    animation: animatetop 0.4s; }
   .modal-search__close-button {
     color: #FFF;
     font-size: 42px;
@@ -2430,16 +2363,12 @@ button {
 
 @media (max-width: 480px) {
   .g-recaptcha {
-    -webkit-transform: scale(0.77);
-            transform: scale(0.77);
-    -webkit-transform-origin: 0 0;
-            transform-origin: 0 0;
+    transform: scale(0.77);
+    transform-origin: 0 0;
     max-width: 232px; }
   #rc-imageselect {
-    -webkit-transform: scale(0.77);
-            transform: scale(0.77);
-    -webkit-transform-origin: 0 0;
-            transform-origin: 0 0; } }
+    transform: scale(0.77);
+    transform-origin: 0 0; } }
 
 /* END NINJA-FORMS */
 /* BEGIN GALLERY */
@@ -2478,8 +2407,7 @@ button {
   .gallery__thumb:hover:before {
     opacity: 0; }
   .gallery__thumb:hover img {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-            transform: scale3d(1.1, 1.1, 1); }
+    transform: scale3d(1.1, 1.1, 1); }
 
 .gallery__title {
   color: #0b1928;
@@ -2707,8 +2635,7 @@ button {
 
 .section--events .swiper-pagination {
   position: relative;
-  -webkit-transform: none;
-          transform: none;
+  transform: none;
   margin: 30px 0 0 0;
   z-index: 99; }
   .section--events .swiper-pagination-bullet {
@@ -2795,7 +2722,6 @@ button {
     margin-bottom: 0; }
   @media (min-width: 1024px) {
     .section--partners .row {
-      display: -webkit-box;
       display: flex;
       height: 200px; } }
   .section--partners .swiper-container {
@@ -2803,11 +2729,8 @@ button {
     height: 100%; }
   .section--partners .swiper-slide {
     text-align: center;
-    display: -webkit-box;
     display: flex;
-    -webkit-box-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
     align-items: center; }
   @media (min-width: 1024px) {
     .section--partners .container {
@@ -2829,12 +2752,9 @@ button {
   @media (min-width: 1024px) {
     .section--partners .col {
       float: left;
-      display: -webkit-inline-box;
       display: inline-flex;
-      -webkit-box-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-              justify-content: center; }
+      align-items: center;
+      justify-content: center; }
     .section--partners .col-4 {
       width: 33.34%;
       padding-right: 0;
@@ -2846,17 +2766,14 @@ button {
         background-color: #2e5170;
         width: 280px;
         height: 100%;
-        -webkit-transform: skew(-20deg);
         transform: skew(-20deg);
         position: absolute;
         left: 0;
         top: 0;
-        -webkit-transform-origin: 0 0;
         transform-origin: 0 0; }
     .section--partners .col-2 {
       width: 170px;
-      -webkit-box-pack: end;
-              justify-content: flex-end; }
+      justify-content: flex-end; }
       .section--partners .col-2 .btn {
         white-space: normal;
         line-height: 1.4;
@@ -2893,8 +2810,7 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     min-height: 100%;
     min-width: 100%;
     z-index: 2;
