Accesibility issues fix

--- a/assets/css/4-sections/_site-footer.scss
+++ b/assets/css/4-sections/_site-footer.scss
@@ -4,6 +4,10 @@
   display: block;
   overflow: hidden;
 
+  a {
+    color: $white;
+  }
+
   @include phone-xl-min {
     text-align: center;
   }
