--- a/assets/css/1-tools/_vars.scss
+++ b/assets/css/1-tools/_vars.scss
@@ -8,5 +8,5 @@ $aqua: #49adb6;
 $darkblue: #2c4f93;
 $gray: #b3b2b2;
 $lightgray: #f5f5f5;
-$darkgray: #a4a4a4;
+$darkgray: #717171;
 /* END COLORS */
