--- a/assets/css/2-basics/_buttons.scss
+++ b/assets/css/2-basics/_buttons.scss
@@ -59,6 +59,8 @@ button {
 
 .js-toggle-nav {
   position: absolute;
+  font-size: 0;
+  line-height: 0;
   right: 0;
   top: 15px;
   z-index: 9999;
