--- a/assets/css/4-sections/_galleries.scss
+++ b/assets/css/4-sections/_galleries.scss
@@ -1,6 +1,6 @@
 /* BEGIN GALLERIES */
 .section--galleries {
-  background-size: cover;
+  background-size: cover !important;
   text-transform: uppercase;
   background-position: center;
   background-repeat: no-repeat;
