--- a/assets/css/3-modules/_primary-nav.scss
+++ b/assets/css/3-modules/_primary-nav.scss
@@ -143,10 +143,12 @@
 
       &:after {
         transform: rotate(45deg);
+        bottom: 30px;
       }
 
       &:before {
         transform: rotate(-45deg);
+        top: 30px;
       }
     }
 
